Components and pages

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -7,12 +7,12 @@ const { sideBarActiveItemID } = Astro.props;
 
 <div class="drawer-side z-40">
   <label for="my-drawer" class="drawer-overlay"></label>
-  <aside class="px-2 pt-2 h-auto min-h-full w-[19rem] bg-base-200 text-base-content flex flex-col">
+  <aside class="px-2 pt-2 h-auto min-h-full w-[19rem] bg-black text-white flex flex-col">
     <div class="w-fit mx-auto mt-5 mb-6">
       <a href="/">
-        <div class="avatar transition ease-in-out hover:scale-[102%] block m-auto">
-          <div class="w-[8.5rem]">
-            <Image class="mask mask-circle" format="webp" width={300} height={300} src="/profile.webp" alt="Profile image" />
+        <div class="avatar transition ease-in-out hover:scale-[100%] block m-auto">
+          <div class="w-[10rem]">
+            <Image class="" format="png" width={400} height={400} src="/logo.png" alt="Logo" />
           </div>
         </div>
       </a>
