--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -4,89 +4,191 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 ---
 
 <BaseLayout title="Resume" sideBarActiveItemID="cv">
+
+  <div class="mb-5 flex justify-center items-center font-specialelite">
+    <div class="text-3xl font-bold pt-12 pb-6">Resume</div>
+  </div>
+
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Profile</div>
+    <div class="text-3xl w-full font-bold font-specialelite">Profile</div>
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    I am a third-year student at NYU Abu Dhabi majoring in Interactive Media and minoring in Theater and Psychology. 
+    I am passionate about the intersection between art and technology and how we can change the world through it, being through programming, 3D modeling, or designing.
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
+    <div class="text-3xl w-full font-bold font-specialelite">Education</div>
   </div>
 
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="New York University"
+      subtitle="B.A. in Interactive Media — Minor in Theater and Psychology [Aug. 2022] - [May. 2026] [Abu Dhabi], [UAE]"
     />
     <TimeLineElement
-      title="Title Name"
-      subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
+      title="ETEC"
+      subtitle="High School with vocational Course in Web Development [Jan. 2020] to [Dec. 2021], [Sao Paulo], [Brazil]"
     />
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Experience</div>
+    <div class="text-3xl w-full font-bold font-specialelite">Experience</div>
   </div>
 
   <div class="time-line-container mb-10">
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Solar Ship Inc."
+      subtitle="Mobile Operating Stations Summer Intern [June. 2024] - [Sept. 2024], [Remote]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    • Designing a Mobile Operating Station for self reliant operations to deliver cargo resources in Africa <br/>
+    • Assisting with the research and development of the team’s Electronic Press Kit (EPK)    
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="NYUAD Spiritual Life, Intercultural Education and Conflict Transformation"
+      subtitle="Restorative Practice Ambassador (Conflict Coach and Mediator) / Social Media Manager [Jan. 2023] - [Jun. 2024], [Abu Dhabi] [UAE]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    • Coached students on personal conflicts in weekly private sessions, addressing issues such as roommate and internal
+    conflicts to improve student well-being and academic performance <br/>
+    • Trained on restorative practices, conflict coaching, mediation frameworks, and conflict resolution
+    • Lead workshops and presented the program to other departments <br/>
+    • Planned and organized advertising strategies and department’s events, resulting in increased visibility and
+    attendance at department-sponsored events <br/>
+    • Designed posters for workshops using Canva and administered the social media profile
     </TimeLineElement>
     <TimeLineElement
-      title="Job Title at Project or Company Name"
-      subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
+      title="Game Vizyon"
+      subtitle="Leader, scrum master and front-end developer [Jan. 2021] - [Jan. 2022], [Sao Paulo] [Brazil]"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
+    • Spearheaded a team of 5 people to develop a an online platform that centralizes video games and tracks their <br/>
+    prices, along with the stores that sell them and a community area for users <br/>
+    • Designed wireframes and implemented front-end development for the website <br/>
+    • Authored technical documentation for the website <br/>
     </TimeLineElement>
   </div>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Certifications</div>
+    <div class="text-3xl w-full font-bold font-specialelite">Projects</div>
+  </div>
+
+  <div class="time-line-container mb-10">
+    <TimeLineElement
+      title="Center for Behavioral Institutional Design"
+      subtitle="Translation [Dec. 2023] - [Dec. 2023], [Abu Dhabi], [UAE]"
+    >
+    • Translated a research survey from English to Portuguese   
+    </TimeLineElement>
+    <TimeLineElement
+      title="The Craft Circle"
+      subtitle="Social Media Manager [Aug. 2023] - [Dec. 2023], [Abu Dhabi] [UAE]"
+    >
+    • Managed the Instagram profile for the SIG (student interest group) <br/>
+    • Designed posters on Canva <br/>
+    • Photographed weekly events <br/>
+    </TimeLineElement>
+    <TimeLineElement
+      title="The Gazelle"
+      subtitle="Writer [Aug. 2022] - [Jan. 2022], [Abu Dhabi] [UAE]"
+    >
+    • Wrote one of the most viewed articles in the features desk of the season
+    </TimeLineElement>
+        <TimeLineElement
+      title="Medical Clinic System"
+      subtitle="Developer | CodeIgniter, Bootstrap [Aug. 2021] - [Sept. 2021], [Sao Paulo] [Brazil]"
+    >
+    • Managed the Instagram profile for the SIG (student interest group) <br/>
+    • Designed posters on Canva <br/>
+    • Photographed weekly events <br/>
+    </TimeLineElement>
+    <TimeLineElement
+      title="Game Vizyon"
+      subtitle="Leader, scrum master and front-end developer | Laravel, Tailwind [Jan. 2021] - [Jan. 2022], [Abu Dhabi] [UAE]"
+    >
+    • Spearheaded a team of 5 people to develop a an online platform that centralizes video games and tracks their
+    prices, along with the stores that sell them and a community area for users    
+    </TimeLineElement>
+    <TimeLineElement
+      title="Tomato Way"
+      subtitle="Developer | Bootstrap, PHP [Aug. 2020] - [Dec. 2020], [Sao Paulo] [Brazil]"
+    >
+    • Developed a website for the game Tomato Way containing static pages and the option to change languages with
+    PHP    
+    </TimeLineElement>
+  </div>
+
+  <div class="mb-5">
+    <div class="text-3xl w-full font-bold font-specialelite">Certifications</div>
   </div>
 
   <ul class="list-disc mx-6 mb-10 grid gap-2">
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="https://www.cps.sp.gov.br/cursos-etec/informatica-para-internet/" target="_blank"> Professional Qualification of Internet Computing Technician (ETEC)</a>
     </li>
     <li>
-      <a href="#" target="_blank"> Certification Name (with link)</a>
+      <a href="https://www.linkedin.com/learning/certificates/5b8e5a075a466f63e652890a8cc4987b6fb9531d1a3fc0d89e7e93937dab9ca3?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3BupBj8%2FbESlSrB7d%2F9WmlFA%3D%3D&accountId=2131553&u=2131553&success=true&authUUID=dLY6bu38RhCCX%2F5FBbH0mA%3D%3D" target="_blank"> Figma Essential Training: The Basics</a>
+    </li>
+    <li>
+      <a href="https://drive.google.com/file/d/1OAcoRvA6oqRHI8To1Sr28_9Nf5qyrKQt/view" target="_blank"> Digital Non-Fiction Storytelling</a>
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/learning/certificates/9159a824d0051b6c21ac817efd3c39633fbabd817bfbdff84b6493651ac9e916?u=2131553" target="_blank"> Programming Foundations: Fundamentals</a>
+    </li>
+    <li>
+      <a href="https://drive.google.com/file/d/1QsDD0cmajXVNC-miTaJEGeOGJIEICvVv/view" target="_blank"> Suicide Prevention Gatekeeper</a>
+    </li>
+    <li>
+      <a href="https://drive.google.com/file/d/1fl6XARb_f0yPNnL6-aLkt-Use21zMRU3/view" target="_blank"> Adult-to-Adult Mental Health First Aid (MHFA)</a>
     </li>
   </ul>
 
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Skills</div>
+    <div class="text-3xl w-full font-bold font-specialelite">Skills</div>
+  </div>
+
+  <div class="mb-5 pt-6">
+    <div class="text-xl w-full font-bold font-specialelite">Coding</div>
   </div>
 
   <ul class="list-disc md:columns-5 columns-2 mx-6">
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
-    <li>Skill Name</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Git</li>
+    <li>Python</li>
+    <li>JavaScript</li>
   </ul>
+
+  <div class="mb-5 pt-6">
+    <div class="text-xl w-full font-bold font-specialelite">Computer</div>
+  </div>
+
+  <ul class="list-disc md:columns-5 columns-2 mx-6">
+    <li>Microsoft Office</li>
+    <li>Figma</li>
+    <li>Photoshop</li>
+    <li>Illustrator</li>
+    <li>InDesign</li>
+    <li>Blender</li>
+  </ul>
+
+  <div class="mb-5 pt-6">
+    <div class="text-xl w-full font-bold font-specialelite">Other</div>
+  </div>
+
+  <ul class="list-disc md:columns-5 columns-2 mx-6">
+    <li>Conflict Resolution</li>
+    <li>Creativity</li>
+    <li>Leadership</li>
+  </ul>
+
+  <div class="mb-5 pt-6">
+    <div class="text-xl w-full font-bold font-specialelite">Languages</div>
+  </div>
+
+  <ul class="list-disc md:columns-5 columns-2 mx-6">
+    <li>Portuguese (native)</li>
+    <li>English (fluent)</li>
+    <li>Spanish (intermediate)</li>
+  </ul>
+
 </BaseLayout>
