--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,17 @@
 <div
-  class="sticky lg:hidden top-0 z-30 flex h-16 w-full justify-center bg-opacity-90 backdrop-blur transition-all duration-100 bg-base-100 text-base-content shadow-sm"
+  class="sticky lg:hidden top-0 z-30 flex h-16 w-full justify-center bg-opacity-90 backdrop-blur transition-all duration-100 bg-black text-base-content shadow-sm"
 >
   <div class="navbar">
     <div class="navbar-start">
       <label for="my-drawer" class="btn btn-square btn-ghost">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current"
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-5 h-5 stroke-current text-white"
           ><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
         </svg>
       </label>
     </div>
     <div class="navbar-center">
-      <a class="btn btn-ghost normal-case text-xl" href="/">Manuel Ernesto ⚡️</a>
+        <img src="logo.png" alt="Victor" class="btn btn-ghost normal-case w-20 h-14">
+      <!-- <a class="btn btn-ghost normal-case text-xl text-white" href="/">Victor Nadu</a> -->
     </div>
     <div class="navbar-end"></div>
   </div>
