--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <div class=" bg-black">
 
         <div class="flex justify-center items-center pt-10">
-            <img src="victor.png" alt="Victor" class="w-2/5 md:w-1/6">
+            <img src="/victor.png" alt="Victor" class="w-2/5 md:w-1/6">
         </div>
 
         <div class="text-center pt-4 font-semibold font-specialelite">
