--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import { Image } from "astro:assets";
 ---
 
 <BaseLayout title="About" sideBarActiveItemID="about">
@@ -10,7 +11,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <div class=" bg-black">
 
         <div class="flex justify-center items-center pt-10">
-            <img src="/victor.png" alt="Victor" class="w-2/5 md:w-1/6">
+            <Image class="" format="png" width={400} height={400} src="/victor.png" alt="Victor" />
         </div>
 
         <div class="text-center pt-4 font-semibold font-specialelite">
