--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@
       </label>
     </div>
     <div class="navbar-center">
-        <img src="logo.png" alt="Victor" class="btn btn-ghost normal-case w-20 h-14">
+        <img src="/public/logo.png" alt="logo" class="btn btn-ghost normal-case w-20 h-14">
       <!-- <a class="btn btn-ghost normal-case text-xl text-white" href="/">Victor Nadu</a> -->
     </div>
     <div class="navbar-end"></div>
