--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,8 +10,8 @@
       </label>
     </div>
     <div class="navbar-center">
-        <img src="/public/logo.png" alt="logo" class="btn btn-ghost normal-case w-20 h-14">
-      <!-- <a class="btn btn-ghost normal-case text-xl text-white" href="/">Victor Nadu</a> -->
+        <!-- <img src="/public/logo.png" alt="Logo" class="btn btn-ghost normal-case w-20 h-14"> -->
+      <a class="btn btn-ghost normal-case text-xl text-white" href="/">Victor Nadu</a>
     </div>
     <div class="navbar-end"></div>
   </div>
