--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@
     </div>
     <div class="navbar-center">
         <!-- <img src="/public/logo.png" alt="Logo" class="btn btn-ghost normal-case w-20 h-14"> -->
-      <a class="btn btn-ghost normal-case text-xl text-white" href="/">Victor Nadu</a>
+      <a class="btn btn-ghost normal-case text-xl text-white font-specialelite" href="/">Victor Nadu</a>
     </div>
     <div class="navbar-end"></div>
   </div>
