--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,8 @@ import { Image } from "astro:assets";
     <div class=" bg-black">
 
         <div class="flex justify-center items-center pt-10">
-            <Image class="" format="png" width={400} height={400} src="/victor.png" alt="Victor" />
+            <Image class="" format="png" width={150} height={150} src="/victor.png" alt="Victor" />
+            <!-- <img src="/victor.png" alt="Victor" class="w-2/5 md:w-1/6"> -->
         </div>
 
         <div class="text-center pt-4 font-semibold font-specialelite">
