--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,22 +8,36 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <div class="text-3xl font-bold pt-12 pb-6">Projects</div>
   </div>
 
-  <div>
-    <div class="text-3xl w-full font-bold mb-5 font-specialelite">Graphic Design</div>
+  <div class="mb-5 flex justify-center items-center font-specialelite">
+    <div class="text-2xl font-bold pt-12 pb-6">Graphic Design</div>
   </div>
 
   <HorizontalCard
-    title="Demo Project 1"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Wampyr"
+    img="/wampyr.png"
+    desc="Black Metal Magazine"
     url="#"
     badge="NEW"
   />
   <div class="divider my-0"></div>
   <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    title="Martin"
+    img="/martin.png"
+    desc="Alternate Movie Poster"
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Egoist Anarchism"
+    img="/egoistanarchism.png"
+    desc="Fictional political poster"
+    url="#"
+  />
+  <div class="divider my-0"></div>
+  <HorizontalCard
+    title="Revolutionary Communists of America"
+    img="/communists.png"
+    desc="Fictional political poster"
     url="#"
   />
 
