--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -8,20 +8,22 @@ const tag_url = url.split("/").slice(0, -1).join("/") + "/tag";
   class="rounded-lg bg-black hover:shadow-xl transition ease-in-out hover:scale-[102%] text-white"
 >
   <a href={url} target={target}>
-    <div class="hero-content flex-col md:flex-row">
-      {
-        img && (
-          <Image
-            src={img}
-            width={750}
-            height={422}
-            format="webp"
-            alt={title}
-            class="max-w-full md:max-w-[13rem] rounded-lg"
-          />
-        )
-      }
-      <div class="grow w-full">
+    <div class="hero-content flex-col">
+      <div class="border-2 rounded">
+        {
+          img && (
+            <Image
+              src={img}
+              width={750}
+              height={422}
+              format="webp"
+              alt={title}
+              class="max-w-full md:max-w-[25rem] rounded-lg"
+            />
+          )
+        }
+      </div>
+      <div class="grow w-full text-center">
         <h1 class="text-xl font-bold">
           {title}
           {badge && <div class="badge badge-secondary mx-2">{badge}</div>}
