--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -8,6 +8,7 @@ const tag_url = url.split("/").slice(0, -1).join("/") + "/tag";
   class="rounded-lg bg-black hover:shadow-xl transition ease-in-out hover:scale-[102%] text-white"
 >
   <a href={url} target={target}>
+    <div>
     <div class="hero-content flex-col">
       <div class="border-2 rounded">
         {
