--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -6,7 +6,7 @@ const activeClass = "border-b-2"; // For primary color replace with `active` cla
 <ul class="menu grow shrink menu-md overflow-y-auto font-specialelite">
     <li><a class="py-3 text-base" id="home" href="/">h o m e</a></li>
     <li><a class="py-3 text-base" id="projects" href="/projects">p r o j e c t s</a></li>
-    <!-- <li><a class="py-3 text-base" id="blog" href="/blog/">writing</a></li> -->
+    <li><a class="py-3 text-base" id="blog" href="/blog/">w r i t i n g s</a></li>
     <li><a class="py-3 text-base" id="cv" href="/cv">r e s u m e</a></li>
     <li><a class="py-3 text-base" id="about" href="/about">a b o u t</a></li>
     <!-- <li><a class="py-3 text-base" id="services" href="/services">Services</a></li> -->
