--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -14,8 +14,8 @@ const { page } = Astro.props;
 ---
 
 <BaseLayout title="Blog" sideBarActiveItemID="blog">
-  <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Blog</div>
+  <div class="mb-5 flex justify-center items-center font-specialelite">
+    <div class="text-3xl font-bold pt-12 pb-6">Writings</div>
   </div>
 
   {
