--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -23,7 +23,7 @@ const pageData = sortedProjects.slice(pageStart, pageStart + pageSize);
 
 <BaseLayout title={`Projects - Page ${currentPage}`} sideBarActiveItemID="projects">
   <div class="mb-5 flex justify-center items-center font-specialelite">
-    <div class="text-3xl font-bold pt-12 pb-6">My Projects</div>
+    <div class="text-3xl font-bold pt-12 pb-6">Projects</div>
   </div>
 
   {pageData.length === 0 ? (
