--- a/src/pages/blog/tag/[tag]/[...page].astro
+++ b/src/pages/blog/tag/[tag]/[...page].astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import HorizontalCard from "@components/HorizontalCard.astro";
 import BaseLayout from "@layouts/BaseLayout.astro";
-import createSlug from "../../lib/createSlug";
+import createSlug from "../../../../lib/createSlug";
 
 // Define the types for the expected page data structure
 interface Post {
