--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -18,7 +18,7 @@
             ></path>
         </svg>
     </a>
-    <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    <a href="https://github.com/vicnadu" target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -33,7 +33,7 @@
         </svg>
     </a>
     <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+        href="https://www.linkedin.com/in/victor-nadu"
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
