--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -15,7 +15,7 @@ const { page } = Astro.props;
 
 <BaseLayout title="Blog" sideBarActiveItemID="blog">
   <div class="mb-5 flex justify-center items-center font-specialelite">
-    <div class="text-3xl font-bold pt-12 pb-6">Blog</div>
+    <div class="text-3xl font-bold pt-12 pb-6">Writings</div>
   </div>
 
   {
